--- a/CSharp/DotNet-Assessments/Assessment1/Assessment1/Assessment1.csproj
+++ b/CSharp/DotNet-Assessments/Assessment1/Assessment1/Assessment1.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Assessment1.FirstAndLastChar</StartupObject>
+    <StartupObject>Assessment1.RemovePosition</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
