--- a/CSharp/DotNet-Assessments/Assessment2/Assessment2/Assessment2.csproj
+++ b/CSharp/DotNet-Assessments/Assessment2/Assessment2/Assessment2.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Assessment2.ProductsProgram</StartupObject>
+    <StartupObject>Assessment2.NegativeException</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
